# obby-macros-v5

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
libraries/: INIReader.cpp  bind.cpp  bind.h  bind.hpp  config.cpp  config.hpp  conversion.cpp  conversion.hpp  debug.hpp  elements.cpp  elements.h  elements.hpp  general.cpp  general.h  general.hpp  globals.h  globals.hpp  imgui_lib.cpp  imgui_lib.h  imgui_lib.hpp  init.cpp  init.h  json_lib.hpp  macros.cpp  macros.h  signals.h  signals.hpp  tasks.cpp  tasks.h  tasks.hpp  windows_lib.cpp  windows_lib.hpp  wndproc.cpp  wndproc.h  wndproc.hpp
preprocessor/: types.hpp
